Fixed invisible sign-in modal close button.

--- a/src/platform/site-wide/sass/merger.scss
+++ b/src/platform/site-wide/sass/merger.scss
@@ -1033,3 +1033,9 @@
     margin-top: 10px;
   }
 }
+
+#signin-signup-modal {
+  .fa {
+    color: inherit;
+  }
+}
